--- a/Notes/Jupyter/Pandas.ipynb
+++ b/Notes/Jupyter/Pandas.ipynb
@@ -3431,11 +3431,8 @@
    ],
    "source": [
     "# show linear regression\n",
-    "fig = plt.figure(figsize = (10, 7))\n",
-    "sns.regplot(\n",
-    "\tx = movies_df.rating,\n",
-    "\ty = movies_df.revenue_millions\n",
-    ");\n",
+    "fig = plt.figure(figsize=(10, 7))\n",
+    "sns.regplot(x=movies_df.rating, y=movies_df.revenue_millions);\n",
     "plt.title('Rating v Revenue');"
    ]
   },
@@ -3460,10 +3457,7 @@
    ],
    "source": [
     "# plot histogram based on column\n",
-    "movies_df['rating'].plot(\n",
-    "\tkind='hist',\n",
-    "\ttitle='Rating'\n",
-    ");"
+    "movies_df['rating'].plot(kind='hist', title='Rating');"
    ]
   },
   {
@@ -3511,10 +3505,7 @@
    ],
    "source": [
     "# plot boxplot based on numerical and categorical data\n",
-    "movies_df.boxplot(\n",
-    "\tcolumn='revenue_millions',\n",
-    "\tby='rating_category'\n",
-    ");"
+    "movies_df.boxplot(column='revenue_millions', by='rating_category');"
    ]
   }
  ],
